# Program-Loader-CM-530

./: .gitignore  CMakeLists.txt  README.md  setup_generator.iss
Image/: Image.qrc
Logger/: CMakeLists.txt  Logger.cpp  Logger.h  Logger_global.h
Program_Loader_CM-530/: CMakeLists.txt  ProgramLoader.cpp  ProgramLoader.h  ProgramLoader.ui  execIcon.rc  main.cpp
